--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               ><img
                 src="https://avatars.githubusercontent.com/u/22807629?v=4"
                 alt=""
+                style="width: 90%"
             /></span>
           </div>
           <div class="col-8 col-7-large col-12-medium">
@@ -192,13 +193,9 @@
                 href="https://andrew-movie-app.netlify.app/"
                 class="image featured"
                 ><img
+                  class="project-img"
                   src="https://raw.githubusercontent.com/adnjoo/Movie-App/main/scrn11.png"
                   alt=""
-                  style="
-                    max-height: 240px;
-                    object-fit: contain;
-                    margin-top: 20px;
-                  "
               /></a>
               <h3>
                 <a href="https://andrew-movie-app.netlify.app/">Movie App</a>
@@ -213,13 +210,9 @@
             <article class="box style2 b-radius-20px" style="max-height: 400px">
               <a href="https://sonic-azure.vercel.app/" class="image featured"
                 ><img
+                  class="project-img"
                   src="https://raw.githubusercontent.com/adnjoo/Sonic/main/scrn2.png"
                   alt=""
-                  style="
-                    max-height: 240px;
-                    object-fit: contain;
-                    margin-top: 20px;
-                  "
               /></a>
               <h3>
                 <a href="https://sonic-azure.vercel.app/">Sonic</a>
@@ -236,13 +229,9 @@
                 href="https://adnjoo.github.io/React-Weather/"
                 class="image featured"
                 ><img
+                  class="project-img"
                   src="https://raw.githubusercontent.com/adnjoo/React-Weather/master/scrn5.png"
                   alt=""
-                  style="
-                    max-height: 240px;
-                    object-fit: contain;
-                    margin-top: 20px;
-                  "
               /></a>
               <h3>
                 <a href="https://adnjoo.github.io/React-Weather/"
@@ -264,15 +253,6 @@
             <hr />
             <h3>Find me on</h3>
             <ul class="social">
-              <!-- <li>
-                Color Clash
-                <a
-                  href="https://twitter.com/adnjoo"
-                  class="icon brands fa-twitter"
-                  target="_blank"
-                  ><span class="label">Twitter</span></a
-                >
-              </li> -->
               <li>
                 <a
                   href="https://www.linkedin.com/in/adnjoo"
