remove button animation

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2>And I'm a Software Builder.</h2>
             <a
               href="#skills"
-              class="button large scrolly animate__animated animate__backInRight"
+              class="button large scrolly"
               >Learn about what I do</a
             >
           </div>
