open project link in new window

--- a/index.html
+++ b/index.html
@@ -189,14 +189,15 @@
             <article class="box style2 b-radius-20px" style="max-height: 400px">
               <a
                 href="https://andrew-movie-app.netlify.app/"
-                class="image featured"
+                class="image featured" 
+                target="_blank"
                 ><img
                   class="project-img"
                   src="https://raw.githubusercontent.com/adnjoo/Movie-App/main/scrn11.png"
                   alt=""
               /></a>
               <h3>
-                <a href="https://andrew-movie-app.netlify.app/">Movie App</a>
+                <a href="https://andrew-movie-app.netlify.app/" target="_blank">Movie App</a>
               </h3>
               <p>
                 PERN full stack web app that helps you save cool movies | TMDB
@@ -206,14 +207,17 @@
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2 b-radius-20px" style="max-height: 400px">
-              <a href="https://sonic-azure.vercel.app/" class="image featured"
+              <a href="https://sonic-azure.vercel.app/" 
+              class="image featured"
+              target="_blank"
                 ><img
                   class="project-img"
                   src="https://raw.githubusercontent.com/adnjoo/Sonic/main/scrn2.png"
                   alt=""
+                  target="_blank"
               /></a>
               <h3>
-                <a href="https://sonic-azure.vercel.app/">Sonic</a>
+                <a href="https://sonic-azure.vercel.app/" target="_blank">Sonic</a>
               </h3>
               <p>
                 Spotify clone using Next.js | Spotify API (Spotify Premium
@@ -226,13 +230,14 @@
               <a
                 href="https://adnjoo.github.io/React-Weather/"
                 class="image featured"
+                target="_blank"
                 ><img
                   class="project-img"
                   src="https://raw.githubusercontent.com/adnjoo/React-Weather/master/scrn5.png"
                   alt=""
               /></a>
               <h3>
-                <a href="https://adnjoo.github.io/React-Weather/"
+                <a href="https://adnjoo.github.io/React-Weather/" target="_blank"
                   >React Weather</a
                 >
               </h3>
