format with Prettier

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <article class="box style2 b-radius-20px" style="max-height: 400px">
               <a
                 href="https://andrew-movie-app.netlify.app/"
-                class="image featured" 
+                class="image featured"
                 target="_blank"
                 ><img
                   class="project-img"
@@ -197,7 +197,9 @@
                   alt=""
               /></a>
               <h3>
-                <a href="https://andrew-movie-app.netlify.app/" target="_blank">Movie App</a>
+                <a href="https://andrew-movie-app.netlify.app/" target="_blank"
+                  >Movie App</a
+                >
               </h3>
               <p>
                 PERN full stack web app that helps you save cool movies | TMDB
@@ -207,9 +209,10 @@
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <article class="box style2 b-radius-20px" style="max-height: 400px">
-              <a href="https://sonic-azure.vercel.app/" 
-              class="image featured"
-              target="_blank"
+              <a
+                href="https://sonic-azure.vercel.app/"
+                class="image featured"
+                target="_blank"
                 ><img
                   class="project-img"
                   src="https://raw.githubusercontent.com/adnjoo/Sonic/main/scrn2.png"
@@ -217,7 +220,9 @@
                   target="_blank"
               /></a>
               <h3>
-                <a href="https://sonic-azure.vercel.app/" target="_blank">Sonic</a>
+                <a href="https://sonic-azure.vercel.app/" target="_blank"
+                  >Sonic</a
+                >
               </h3>
               <p>
                 Spotify clone using Next.js | Spotify API (Spotify Premium
@@ -237,7 +242,9 @@
                   alt=""
               /></a>
               <h3>
-                <a href="https://adnjoo.github.io/React-Weather/" target="_blank"
+                <a
+                  href="https://adnjoo.github.io/React-Weather/"
+                  target="_blank"
                   >React Weather</a
                 >
               </h3>
