add imagesLoaded to Flickity options

--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
       wrapAround: true,
       autoPlay: true,
       prevNextButtons: false,
-      pageDots: false
+      pageDots: false,
+      imagesLoaded: true
     });
   </script>
   <script>
