add dark mode button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>drew's site</title>
     <link rel="icon" type="image/x-icon" href="/assets/ramen.png">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css"/>
+    <link id="dark-mode" rel="stylesheet" href="">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" />
 </head>
 
 <body>
@@ -71,7 +73,7 @@
                 Agile
                 <img class="skill-icon" src="./assets/skill_agile.png" />
             </li>
-        </ul>
+            </ul>
     </section>
     <section>
         <h1>Projects</h1>
@@ -95,6 +97,7 @@
                 </a></li>
         </ul>
     </section>
+    <button class="dark-mode-btn" onclick="darkMode()">🌔</button>
     <script src="script.js"></script>
 </body>
 
