add vinci quote

--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
         </ul>
     </section>
     <button class="dark-mode-btn" onclick="darkMode()">🌔</button>
+    <footer>
+        <div id="vinci">
+            <div id="quote">La semplicità è l'ultima sofisticazione</div>
+            <img src="./assets/da_vinci.png" id="vinci_image" height="30">
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 
