move pfp to assets folder

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="header">
         <h1 class="header-text">Hi I'm Andrew</h1>
         <p>I am a software developer</p>
-        <img src="./pfp.jpg" alt="pfp" height="150" style="border-radius: 30%">
+        <img src="./assets/pfp.jpg" alt="pfp" height="150" style="border-radius: 30%">
     </section>
     <section>
         <h1>Portfolio Links</h1>
