style: add icons for projects, edit a/link styles

--- a/index.html
+++ b/index.html
@@ -78,9 +78,15 @@
     <section>
         <h1>Projects</h1>
         <ul>
-            <li><a href="https://andrew-movie-app.netlify.app/" target="_blank">Movie App</a></li>
-            <li><a href="https://sonic-azure.vercel.app/" target="_blank">Sonic | Spotify Clone</a></li>
-            <li><a href="https://adnjoo.github.io/React-Weather/" target="_blank">React Weather</a></li>
+            <li><a href="https://andrew-movie-app.netlify.app/" target="_blank">
+                Movie App <i class="bi bi-film"></i>
+            </a></li>
+            <li><a href="https://sonic-azure.vercel.app/" target="_blank">
+                Sonic | Spotify Clone <i class="bi bi-spotify"></i>
+            </a></li>
+            <li><a href="https://adnjoo.github.io/React-Weather/" target="_blank">
+                React Weather <i class="bi bi-cloud-sun"></i>
+            </a></li>
         </ul>
     </section>
     <section>
