add margin bottom to footer where Vinci is

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <button class="dark-mode-btn" onclick="darkMode()">🌔</button>
     <section class="header">
         <h1 class="header-text">Hi I'm Andrew</h1>
         <p>I am a software developer</p>
@@ -89,7 +90,7 @@
             </a></li>
         </ul>
     </section>
-    <section>
+    <section id="footer">
         <h1>Social Links</h1>
         <ul>
             <li><a href="https://instagram.com/adnjoo" target="_blank">Instagram
@@ -103,7 +104,6 @@
                 </a></li>
         </ul>
     </section>
-    <button class="dark-mode-btn" onclick="darkMode()">🌔</button>
     <footer>
         <div id="vinci">
             <div id="quote">La semplicità è l'ultima sofisticazione</div>
