--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                 <img class="skill-icon" src="./assets/skill_python.png" />
             </li>
             <li class="list-skill">
+                Rails
+                <img class="skill-icon" src="./assets/skill_rails.png" />
+            </li>
+            <li class="list-skill">
                 Git
                 <img class="skill-icon" src="./assets/skill_git.png" />
             </li>
