refactor: dark mode script

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <button class="dark-mode-btn" onclick="darkMode()">🌔</button>
+    <button id="dark-mode-btn" onclick="darkMode()">🌔</button>
     <section class="header">
         <h1 class="header-text">Hi I'm Andrew</h1>
         <p>I am a software developer</p>
